# radiology-database

./: README.md  main.py  pyproject.toml
mock_data/: 2.16.840.1.114362.1.11979141.22403444876.563074960.617.1840.dcm  2.16.840.1.114362.1.11979141.22403444876.563074960.618.1843.dcm  2.16.840.1.114362.1.11979141.22403444876.563074960.619.1844.dcm  2.16.840.1.114362.1.11979141.22403444876.563074960.619.1845.dcm
radiology-db/: mypy.ini  review.md
radiology-db/db_app/: forms.py  models.py  segmentation.py  tests.py  urls.py  views.py
radiology-db/db_app/migrations/: 0001_initial.py  0002_remove_labtest_treatment_cycle_and_more.py  0003_remove_imagingstudy_age_at_imaging_and_more.py  0004_remove_absorbeddose_d50_and_more.py  0005_remove_clinicaloutcome_toxicity_organ.py  0006_remove_dicomfile_energy_window_and_more.py  0007_dicomfile_file.py  0008_alter_imagingstudy_year_of_study.py
radiology-db/db_app/templates/: base.html  dicom_form.html  dicom_viewer.html  form.html  index.html  patient_detail.html
radiology-db/db_project/: asgi.py  settings.py  urls.py  wsgi.py
