[project]
name = "radiology-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-stubs>=6.0.5",
    "graphviz>=0.21",
    "mypy==1.15",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "pydicom>=3.0.2",
    "ruff>=0.15.14",
    "scikit-image>=0.26.0",
    "types-pydicom>=3.0.0.0",
    "uvicorn>=0.48.0",
]
